feat(agenstra): environment multichat support
support holding multiple simultaneous conversations with the same environment
